slightly defer plasmoid init

since when the plasmoid is gettng created other events may be processed,
slightly defer it's init() so that if a malformed mpris implementation
(hello VLC) adds the plasmoid to tasks immediately, so we can ensure
that every plasmoid gets onle and only one instance
BUG:334622